Alignment and font styling fixes

--- a/blog-preview-card-main/styles.css
+++ b/blog-preview-card-main/styles.css
@@ -1,14 +1,21 @@
 body {
+    position: relative;
     background: #f5d04e;
+    display: flex;
+    justify-content: center;                                                                                                                              
+    align-items: center;
+    min-height: 100vh;
     
     .card {
         display: flex;
         flex-direction: column;
         gap: 15px;
-        width: 350px;
+        width: 310px;
         border-radius: 15px;
+        box-shadow: 4px 4px 0px black; 
         padding: 15px;
         background-color: white;
+        font-size: 12px;
 
         img {
             border-radius: 10px;
@@ -25,7 +32,11 @@ body {
 
         .article-title {
             font-weight: bold;
-            font-size: 20px;
+            font-size: 18px;
+        }
+
+        .article-description {
+            color: #535050;
         }
 
         .author {
